tests/build/widget_new/when_missing_expr1.stderr
error: expected when expression
 --> $DIR/when_missing_expr1.rs:5:9
  |
5 |         when
  |         ^^^^
